# paradise-synthesizer

./: Cargo.toml  README.md  TODO.md
src/: main.rs  pressed_notes.rs  synth_engine.rs  unison.rs  young.rs
src/engines/: mod.rs  test.rs  young.rs
src/ugens/: mod.rs
